--- a/VacationTracker/res/menu/leave_menu.xml
+++ b/VacationTracker/res/menu/leave_menu.xml
@@ -4,4 +4,8 @@
           android:icon="@drawable/ic_menu_settings"
           android:showAsAction="ifRoom"
           android:title="Settings" />
+    <item android:id="@+id/leaveHistory"
+          android:icon="@drawable/ic_menu_settings"
+          android:showAsAction="ifRoom"
+          android:title="Leave History" />
 </menu>
