--- a/VacationTracker/res/values/style.xml
+++ b/VacationTracker/res/values/style.xml
@@ -21,6 +21,12 @@
     <style name="LeaveViewText.Content.Land">
     	<item name="android:textSize">20pt</item>
     </style>
+    <style name="LeaveHistoryLayout">
+    	<item name="android:layout_width">fill_parent</item>
+  		<item name="android:orientation">horizontal</item>
+  		<item name="android:padding">7pt</item>
+  		<item name="android:layout_height">wrap_content</item>
+    </style>
     <style name="ButtonLayout">
     	<item name="android:layout_width">fill_parent</item>
   		<item name="android:orientation">horizontal</item>
