--- a/res/layout/leave_item.xml
+++ b/res/layout/leave_item.xml
@@ -4,15 +4,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
 
-        <DatePicker
-            android:id="@+id/datePicker1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true" />
-
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/dateLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -21,7 +14,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <DatePicker
-            android:id="@+id/datePicker2"
+            android:id="@+id/datePicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -29,7 +22,7 @@
             android:layout_below="@+id/textView1" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/hoursLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -39,7 +32,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/hours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -51,7 +44,7 @@
         </EditText>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/notesLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -60,7 +53,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/notes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
