--- a/res/layout/leave_category_edit_fragment.xml
+++ b/res/layout/leave_category_edit_fragment.xml
@@ -33,6 +33,7 @@
 	        <TextView
 	            android:id="@+id/accrualLabel"
 	            android:layout_gravity="bottom"
+	            android:layout_width="wrap_content"
 	            style="@style/EditLabelText"
 	            android:layout_weight="2"
 	            android:layout_height="wrap_content"
@@ -41,7 +42,9 @@
 	            android:layout_gravity="bottom|right"
 		        android:layout_width="wrap_content"
 		        android:layout_weight="0"
-		        android:layout_height="wrap_content"/>
+		        android:layout_height="wrap_content"
+		        android:onClick="onAccrualChecked"
+		        android:checked="true" />
         </LinearLayout>
         
         <TextView
@@ -94,6 +97,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/leaveCapType"
+            android:visibility="gone"
             android:text="@string/leave_pref_cap_val_max" />
 
         <EditText
@@ -101,6 +105,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
 			android:layout_below="@+id/leaveCapValLabel"
+			android:visibility="gone"
 			android:inputType="numberDecimal" />
 
     </RelativeLayout>
