--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -55,6 +55,7 @@
         <item name="com.jbalboni.vacation:selectedColor">#FF000000</item>
         <item name="com.jbalboni.vacation:footerColor">#ff33b5e5</item>
         <item name="com.jbalboni.vacation:selectedBold">false</item>
+        <item name="android:textColor">#88000000</item>
     </style>
     <style name="EditLabel">
     	<item name="android:layout_height">wrap_content</item>
