--- a/res/layout/leave_category_row.xml
+++ b/res/layout/leave_category_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-  		style="@style/LeaveHistoryLayout">
+  		style="@style/LeaveHistoryLayout"
+  		orientation="horizontal">
 	<TextView android:id="@+id/categoryTitle"
 	    xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
