--- a/res/layout/leave_history_row.xml
+++ b/res/layout/leave_history_row.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
   		style="@style/LeaveHistoryLayout">
 	<TextView android:id="@+id/date"
     	xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"/>
+    	android:layout_height="wrap_content"
+    	android:layout_alignParentTop="true"/>
     <TextView android:id="@+id/separator"
 	    xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:text="@string/separator"
     	android:paddingLeft="7pt"
-    	android:paddingRight="7pt"/>
+    	android:paddingRight="7pt"
+    	android:layout_toRightOf="@+id/date"/>
 	<TextView android:id="@+id/hours"
 	    xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"/>
-</LinearLayout>
+    	android:layout_height="wrap_content"
+    	android:layout_toRightOf="@+id/separator"/>
+    <Button android:id="@+id/notes"
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:layout_alignParentTop="true"
+    	android:layout_alignParentRight="true"
+    	android:text="note"/>
+</RelativeLayout>
